--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
-    "@react-leaflet/core": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
-    "react-leaflet-markercluster": "^5.0.0-rc.0",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-leaflet-markercluster": "^2.0.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
